# pyspot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  TODO.md  compile.sh
cmake/: ExtensionGenerator.cmake  FindPythonLibraries.cmake  test.cmake
include/: PySpot.h  PySpotConfig.h  PySpotException.h  PySpotFunction.h  PySpotModule.h  PySpotObject.h  PySpotString.h  PySpotTuple.h
include/pyspot/: Bool.h  Common.h  Dictionary.h  Error.h  Exception.h  Function.h  Interpreter.h  Long.h  Method.h  Module.h  Object.h  String.h  Tuple.h  Wrapper.h  common.h
script/: Component.template.h  Enum.template.h  Extension.template.cpp  Extension.template.h  gencomponent.py  generate-component.py  generate-enum.py  generate-extension.py  genextension.py  hello.py  script.py
script/2/: Component.template.h
script/3/: Component.template.h  Extension.template.cpp  Extension.template.h
source/: PySpot.cpp  PySpotFunction.cpp  PySpotModule.cpp  PySpotObject.cpp  PySpotString.cpp  PySpotTuple.cpp
src/: Bool.cpp  Config.h.in  Dictionary.cpp  Error.cpp  Function.cpp  Interpreter.cpp  Long.cpp  Method.cpp  Module.cpp  Object.cpp  PySpot.cpp  PySpot.h  PySpotException.h  PySpotFunction.cpp  PySpotModule.cpp  PySpotModule.h  PySpotObject.cpp  PySpotObject.h  PySpotString.cpp  PySpotString.h  PySpotTuple.cpp  String.cpp  Tuple.cpp
test/: CMakeLists.txt  main.cpp  tests.cpp  tests.h
test/component/: Single.json  SingleComponent.json  StringComponent.json  Test.json  TestComponent.json  TransformComponent.json
test/extension/pyspot/: Pyspot.json
test/extension/pyspot/component/: String.json
test/extension/pytest/: Pytest.json
test/extension/pytest/component/: Single.json  String.json  Test.json  Transform.json  Vec3.json
test/extension/pytest/enum/: Input.json
test/extension/pytest/input/: Action.json  Key.json
test/extension/pywrap/: Pywrap.json
test/extension/pywrap/wrap/: Person.json  Test.json
test/extension/pywrap/wrap/input/: Action.json  Input.json  Key.json
test/include/pytest/extension/: Pytest.incl.cpp
test/include/pywrap/extension/: Pywrap.incl.cpp
test/include/test/: Color.h  Color.hpp  Common.h  Common.hpp  Details.h  Details.hpp  Export.h  Export.hpp  Function.h  Function.hpp  Product.h  Product.hpp  Test.h  Test.hpp  Vec2.h  Vec2.hpp  Week.hpp
test/include/wrap/: Person.h  Test.h
test/include/wrap/input/: Action.h  Input.h  Key.h
test/module/: pytestmodule.cpp  pytestmodule.h
test/script/: array-test.py  class-test.py  data.py  enum-test.py  hello.py  map-test.py  map.py  script.py  struct-test.py  utils.py  vec2-test.py
test/script/2/: base-test.py  function-test.py  product-test.py  struct-test.py
test/script/3/: script.py  utils.py  wrapper.py
test/source/: main.cpp  tests.cpp  tests.h
test/src/: Array.cpp  Class.cpp  Enum.cpp  Export.cpp  Function.cpp  Interpreter.cpp  Main.cpp  Map.cpp  Product.cpp  Struct.cpp  Vec2.cpp  main.cpp  tests.cpp  tests.h  wrapper-test.cpp  wrapper-test.h
